fix(toast): z-index from gloabls

--- a/src/app/packages/core/utils/toast/toast/toast.component.less
+++ b/src/app/packages/core/utils/toast/toast/toast.component.less
@@ -1,7 +1,9 @@
+@import '~@ansyn/core/less/z-index-globals';
+
 div.toast {
 	background: rgba(0, 0, 0, 0.7);
 	position: fixed;
-	z-index: 3;
+	z-index: @toast;
 	color: white;
 	left: 10px;
 	bottom: 10px;
